--- a/main.tex
+++ b/main.tex
@@ -28,14 +28,14 @@
 %----------------------------------------------------------------------------------------\
 \begin{center}
     \hspace{-\hoffset}
-    \huge\bf{\href{https://www.ashishkedia.me}{Ashish Kedia}}
+    \huge\bf{\href{https://nithinraok.github.io/}{Nithin Rao}}
 \end{center}
 \vspace{-7mm}
 \moveleft\hoffset\vbox{\hrule width 19cm height 0.5pt}
 \vspace{-9mm}
 \begin{center}
     \hspace{-\hoffset}
-    \href{mailto:ashish1294@gmail.com}{ashish1294@gmail.com} ~\textbullet~ \(+91\) 9986978059 ~\textbullet~ \#C501, Mega Tower 1, NITK, Mangalore, India
+    \href{mailto:nithinrao.koluguri@gmail.com}{nithinrao.koluguri@gmail.com} ~\textbullet~\(+91\) 7676726686 ~\textbullet~ \Dr No:1-158, Hanuman Nagar, Bhupalpally, Telangana, India-506169
 \end{center}
 \vspace{-7mm}
 \begin{resume}
@@ -44,38 +44,11 @@
 %	EDUCATION SECTION
 %----------------------------------------------------------------------------------------
 \section{Education}
-\textbf{B.Tech in Information Technology, Senior Year} \hfill 2012 - 2016 \\
-\href{http://nitk.ac.in/}{National Institute of Technology Karnataka, Surathkal, India}
-\begin{itemize}
- \item CGPA of \textbf{9.47}/10 (Dec 2015)
-\end{itemize}
-\textbf{High School} - \href{http://www.birlahighschool.com/}{Birla High School, Kolkata} (CBSE) - 92.4\% \hfill 2010 - 2012 \\
-\textbf{Secondary School} - Nopany High, Kolkata (WBBSE) - 85\% \hfill 2000 - 2010
- 
-%----------------------------------------------------------------------------------------
-%	EXPERIENCE SECTION
-%----------------------------------------------------------------------------------------
-\section{Experience}
-\textbf{Software Engineering Intern, \href{http://www.google.com}{Google, San Francisco}} \hfill May, 2015 - July, 2015\\
-Worked with the Cloud Datastore Team to create a sample application that demonstrates the best practices to use datastore. The django application uses NDB API and will help programmers acquainted with relational databases to model and build a scalable application with datastore. The application is accompanied by a blog post that discusses several design patterns that the application developers might encounter. \\
-\\
-\textbf{Software Engineering Intern, \href{http://www.simplewealth.in/}{SimpleWealth, Bangalore}} \hfill Dec, 2014 \\
-Designed and Implemented cloud data synchronization mechanism between Android clients and Rails-based server. Optimization for slow and erratic network included data compression and batching of network, I/O operations. Implemented an efficient sync scheduling algorithm to save power and ensure fault tolerance. New method was found to be 36\% faster and consumed 23\% less bandwidth. \\
-\\
-\textbf{Summer Research Intern in Fundamental Research Group, \href{http://www.cse.iitb.ac.in/}{IIT Bombay}} \\
-\emph{Mentored by \href{http://en.wikipedia.org/wiki/Deepak_B._Phatak}{Prof. Deepak B Phatak, Dept. of CSE, IIT Bombay}} \hfill May, 2014 - July, 2014 \\
-Developed algorithms for User-Modeling, Content-Modeling and Adaptive Engine on EdX. Implemented semi-automatic concept mapping, recommendation algorithms like collaborative filtering, Pearson coefficient, deviation method and artificial ant colony method. A Persiva-like system evaluation model was also implemented. 78\% users found it helpful and average course completion time was reduced by 30\%\\
-\\
-\textbf{Summer Trainee, \href{http://www.globsynskills.com/gfs/}{Globsyn Finishing School}} \hfill May, 2013 - July, 2013 \\
-160 hrs of training in Web Development(PHP, HTML5, CSS3, MySQL, JQuery, Bootstrap) and Android Application Development.
-
-%----------------------------------------------------------------------------------------
-%	TECHNICAL SKILLS SECTION
-%----------------------------------------------------------------------------------------
-\section{Technical \hspace{2mm} Skills}
-\textbf{Strongest Areas} - Databases, Algorithms, Parallel Programming \\
-\textbf{Languages} - C, Python, Java, C++, PHP, Shell Script, JS\\
-\textbf{Tools/Frameworks} - Django, JQuery, STL, \LaTeX, MySQL, SQLite, OpenMP, OpenGL, MPI, BLAS, Git
+\textbf{B.Tech in Electronics and Communication Engineering} \hfill 2012 - 2016 \\
+\href{http://nitk.ac.in/}{National Institute of Technology Karnataka, Surathkal, India} - CGPA of 7.59/10 \\
+\textbf{Intermediate} - \href{http://http://srichaitanya.net/}{Sri Chaithanya Educational
+Institutions, Hyderabad}  - 97\% \hfill 2010 - 2012 \\
+\textbf{Secondary School} - Teja High School,Bhupalpally - 92.33\% \hfill 2000 - 2010
 
 %---------------------------------------------------------------------------------------
 %	PUBLICATION SECTION
@@ -83,37 +56,78 @@ Developed algorithms for User-Modeling, Content-Modeling and Adaptive Engine on 
 
 \section{Publications}
 \begin{itemize}[leftmargin=*]
-\item Devanshu J, \textbf{Ashish K}, Rakshit S, Sameer S, ``Recommendation Techniques for Adaptive E-learning'', Advances in Computer Science and Information Technology, vol. 2, No. 1, 2015. \href{https://drive.google.com/file/d/0B6A-3_6rwie9bS1OaFdzbW9BZXM/view?usp=sharing}{view here}
-\item \textbf{Ashish Kedia} and Anusha Prakash, "Data Synchronization on Android Clients", International Conference on Communication Software and Networks, June 6-7$^{th}$, 2015, Chengdu, China. \href{http://ieeexplore.ieee.org/xpl/articleDetails.jsp?reload=true&arnumber=7296156}{view here}
+\item \textbf{Nithin Rao K}, G Nisha Meenakshi, Prasanta Kumar Ghosh, ``Spectrogram enhancement using multiple window Savitzky Golay (MWSG) filter for robust bird sound detection'', IEEE/ACM Transactions on Audio, Speech, and Language Processing,May 2017. \href{http://ieeexplore.ieee.org/document/7933047/}{view here}
+\end{itemize}
+ 
+%----------------------------------------------------------------------------------------
+%	EXPERIENCE SECTION
+%----------------------------------------------------------------------------------------
+\section{Experience}
+
+\textbf{Project Assistant at \href{http://spire.ee.iisc.ac.in/spire/}{SPIRE LAB IISc}}, Bangalore
+\hfill  Jan 17, 2018 - Currently\\
+Working on a project to detect ALS and Parkinson disease by analyzing the speech of patients.
+
+\textbf{Software Developer at \href{http://www.bosch-india-software.com}{Robert Bosch Engineering and Business Solutions}}, Bangalore
+\hfill July 07, 2016 - Jan 16,2018\\
+Worked on Customer and Production diagnosis in Telematics Projects, where implemented new features and also ported new project in the
+existing module for \href{https://www.daimler.com/}{Daimler}} using software language C++\\
+\\
+\textbf{Summer Research Intern in Spire Lab , \href{http://spire.ee.iisc.ac.in/spire/}{Spire Lab, IISc}}\\
+\emph{Mentored by \href{http://www.ee.iisc.ac.in/new/people/faculty/prasantg/}{Dr. Prasanta Kumar Ghosh, Dept. of Electrical Engineering, IISc Bangalore}} \hfill May, 2016 - July, 2016\\
+Developed an UnSupervised System for robust bird sound detection using enhanced Multiple Window Savitzky-Golay (MWSG) spectrogram.Proposed method, on average,
+achieved higher F-score (10.24\% relative) compared to the best of the baseline schemes. \\
+\\
+\textbf{Winter Research Intern in Spire Lab , \href{http://spire.ee.iisc.ac.in/spire/}{Spire Lab,IISc}}\\
+\emph{Mentored by \href{http://www.ee.iisc.ac.in/new/people/faculty/prasantg/}{Dr. Prasanta Kumar Ghosh, Dept. of Electrical Engineering, IISc Bangalore}} \hfill Dec, 2016\\
+Worked on a project, ``Converting whispered speech to normal speech using CELP Codec'' to include Pitch for the whispered signal as it lacks Pitch \& Synthesize speech to produce normal human speech like signal from Whispered Speech and designed an Android Application for the same \\
+\\
+\textbf{Summer Research Intern in Digital Signal Processing Lab, \href{http://www.iitbbs.ac.in/laboratories.php?code=es/}{School of Electrical Sciences}} \\
+\emph{Mentored by \href{http://www.iitbbs.ac.in/profile.php/gpanda/}{Prof. Ganapathi Panda,School of Electrical Sciences, IIT Bhubaneshwar}} \hfill May, 2014 - June, 2014 \\
+Developed algorithms to recognize Oriya Numerals using Radial Basis Function Neural Network whose features are extracted from Curvelet Transformed numeral which is further processed for dimensionality reduction using Principal component analysis (PCA) achieved an 97.92\% accuracy.  \\
+\\
+\textbf{VLSI Design Contest in, \href{https://www.synopsys.com/}{Synopsys Hyderabad}} \hfill July, 2015 \\
+Participated in Synopsys Design Contest Program, where we were trained on Synopsys EDA Custom Designer Tool and Implemented ``Basic Latched Comparator''
+
+%----------------------------------------------------------------------------------------
+%	TECHNICAL SKILLS SECTION
+%----------------------------------------------------------------------------------------
+\section{Technical \hspace{2mm} Skills}
+\textbf{Strongest Areas} -Audio Speech and Image Processing, Linear Algebra \\
+\textbf{Languages} - Python, C++, C,Java\\
+\textbf{Tools} - MATLAB, Qt, Kaldi, Praat, Audacity, Processing, Eclipse, Android Studio, Jupyter, Anaconda, Git, JIRA , Vector CaNoe
+
+%----------------------------------------------------------------------------------------
+%	Selected Projects Section
+%----------------------------------------------------------------------------------------
+\section{Selected Projects}
+ %All projects available on git : \url{https://www.github.com/nithinraok}
+%\setlist[itemize]{
+\begin{itemize}[leftmargin=*]
+ \item \textbf{\href{https://github.com/nithinraok/Decision-level-data-fusion-of-Image-and-Speech-recognition-system}{Decision level data fusion of Image and Speech recognition system}} : Major Project on, “Detecting an object in an area based on the command given through speech using MFCC and HMM for Speech \& HOG and SVM for Image as Features and classifier respectively” under the guidance of \href{http://ece.nitk.ac.in/professor/ashvini-chaturvedi}{Prof.\hspace{2mm}Ashvini Chaturvedi}.
+ \item \textbf{\href{}{Controlling a switch}} - Controlling a switch through DTMF codes of Mobile Keypad modulated by FSK.
+ \item \textbf{\href{}{Line follower Robot}} : Designed a line follower robot without using microcontroller during Engineer-’13.
+ \item \textbf{\href{}{Catch the LED-game}} :Written VHDL code for the game on XILINX Software.
+ \item \textbf{\href{}{2-1 Quiz buzzer circuit}} : Built a 2-1 quiz buzzer circuit using 555 Timer.
+\end{itemize}
+
+
+%----------------------------------------------------------------------------------------
+%	Online Course Certificates
+%----------------------------------------------------------------------------------------
+\section{Online Course Certificates}
+% All projects available on git : \url{https://www.github.com/nithinraok}
+%\setlist[itemize]{
+\begin{itemize}[leftmargin=*]
+ \item {Completed ``Image and video processing: From Mars to Hollywood with a stop at the hospital'' \href{https://www.dropbox.com/s/n3x5sz97q1qkq0f/Coursera\%20images\%202017.pdf?dl=0}{\textbf{course}} with distinction offered by Duke University which was taught by \href{http://ece.duke.edu/faculty/guillermo-sapiro}{Prof. Guillermo Sapiro} }
+
 \end{itemize}
 
 %----------------------------------------------------------------------------------------
 %	RELEVANT COURSE SECTION
 %----------------------------------------------------------------------------------------
 \section{Relevant \hspace{2mm} Courses}
-Data Structures and Algorithms, Operating System, Computer Graphics, Unix Programming, Advance Computer Networks, Databases, Automata Theory, Parallel Computing, Distributed Computing, Information Security, Human Computer Interaction, Software Engineering
-
-%----------------------------------------------------------------------------------------
-%	Selected Projects Section
-%----------------------------------------------------------------------------------------
-\section{Selected Projects}
-All projects available on git : \url{https://www.github.com/ashish1294}
-%\setlist[itemize]{
-\begin{itemize}[leftmargin=*]
- \item \textbf{\href{https://github.com/Bug-Assassins/DFC_query_builder}{DFC Query Builder}} : A mini-scale Database Engine using C. Features include buffer management, Query Optimization, Indexing using B+ Trees, Temporary Tables, Batching, Custom block size and GUI (web based) Query generator in PHP which communicates with DB server in C++ using sockets.
- \item \textbf{\href{https://github.com/Bug-Assassins/Relational-Graph-Database}{Storage Engine for RDBMS}} - Developed a new graph-based storage model for Relational Databases that can perform join queries in linear time. The time for aggregate queries also varies linearly with size of result set. Sample implementation in C++ where data was stored in-memory.
- \item \textbf{\href{https://github.com/Bug-Assassins/web_service_retrieval}{Web Service Retrieval}} : Wrote scripts to crawl, extract and index over 1000+ service description (OWLS) files. Used interface information to build a search engine that compares 7 categories of keywords. Used NLP techniques on text description find semantics and search services via context matching.
- \item \textbf{\href{https://github.com/ashish1294/ChessOOP}{Chess Game}} : A GUI based Chess game in JAVA for two players that implements all major OOP Concepts. Techniques like backtracking and Greedy Approach was used to determine possible moves. Files were used for storing statistics.
- \item \textbf{\href{https://github.com/Bug-Assassins/Galaxian}{Galaxian}} : An OpenGL based classic 2D shooting game in C++. Features include collision detection algorithms, double buffering to provide high FPS flicker-free 2D animations, mouse controls, hot keys and space simulation. Statistics and settings stored using files.
- \item \textbf{\href{https://github.com/Bug-Assassins/TAJ-Defender}{TAJ Defender}} : A sand-boxing mechanism for C and C++ codes using SEACOMP to prevent system calls. Features include custom malloc() using mmap, Resource-time \& time-limit for code execution
- \item \textbf{\href{https://github.com/Bug-Assassins/Konnect}{Konnect}} : A mini-scale TCP/IP stack for file transfer from one system to another system over a network using C. Features includes headers of all 4 Layers, CRC error check, TCP Handshaking and flow control.
- \item \textbf{\href{https://github.com/ashish1294/flint2}{FLINT}} : Open-Source Contribution to FLINT (Fast Library for Integer Arithmetic) involving algorithms for Matrices over finite field - Patterson Stockmeyer Algorithm, Matrix Squaring, Level 3 BLAS in Matrix Multiplication and benchmarking results of all optimizations.
- \item \textbf{\href{https://github.com/ashish1294/DigitalPassbook}{Digital Passbook}} : An Android App to keep track of all transactions across multiple bank accounts.
- \item \textbf{\href{https://github.com/ashish1294/OnlineBankingPHP}{Online Banking}} : Uses PHP and MySQL - Transaction Management, Loans, Cheque, Fund Transfers.
- \item \textbf{\href{https://github.com/ashish1294/SGC-App}{SGC APP}} : An android application for Star Gazing Club, NITK - Included a digital magazine reader.
- \item \textbf{\href{https://github.com/ashish1294/code-now-CodeChef}{CodeChef Code Now}} : A chrome extension to instantly open up user's favorite IDE directly from the problem page on CodeChef, SPOJ or CodeForces. Uses chrome Native Messaging.
- \item \textbf{\href{}{Drive Assist}} : An app that uses Kinect v2 for Windows to detect if driver is drowsy using facial features.
-\end{itemize}
+Digital Signal Processing, Number Theory, Advanced Digital Signal Processing, Adaptive Signal Processing, Applications of Signal Processing on Image and Video, Digital Signal Processing Architecture
 
 %----------------------------------------------------------------------------------------
 %	ACHIEVEMENT SECTION
@@ -121,17 +135,12 @@ All projects available on git : \url{https://www.github.com/ashish1294}
 
 \section{Achievements and Awards}
 \begin{itemize}[leftmargin=*]
- \item Selected for prestigious \href{http://www.kvpy.org.in/main/}{\emph{Kishore Vaigyanik Protsahan Yojana}} Scholarship in 2012
- \item Selected for \href{https://www.mitacs.ca/en/programs/globalink/globalink-research-internship}{Mitacs Globlink Research Intern} Scholarship in Canada
- \item Selected for \href{https://www.daad.de/deutschland/stipendium/datenbank/en/21148-scholarship-database/?status=1&origin=4&subjectGrps=&daad=1&q=wise&page=1&detail=50015295}{DAAD WISE Scholarship} for Research Internship in Germany
- \item Runners Up in Microsoft's 24-hr National Hackathon - \href{https://www.acadaccelerator.com/}{Code.Fun.Do}, Best Design Award
- \item Most tech savvy idea - Quik View (Data Visualization App) in \href{http://www.venturesity.com/challenge/id/73}{Quikr Hackathon}, 2015
- \item Selected of \href{http://icpc.amrita.ac.in/2014/}{ACM ICPC Amritapuri Onsite} Nationals in 2013, 2014
- \item 4th in India in \href{http://www.ieee.org/membership_services/membership/students/competitions/xtreme/index.html}{IEEE Xtreme 7.0} - 24hr Coding Contest
- \item National Finalist in Mathematics and Cyber Olympiads
- \item Active participation on online competitive coding websites - \href{http://www.codechef.com/users/ashish1294}{CodeChef}, \href{http://www.spoj.com/users/ashish1294/}{Spoj}, \href{http://community.topcoder.com/tc?module=MemberProfile&cr=23303026}{TopCoder}, \href{http://codeforces.com/profile/ashish1294}{CodeForces}, etc. Member Handle - ashish1294
- \item Convenor (Head) of Web Enthusiast's Club, NITK
- \item Joint Convernor of Computer Science Events, Engineer 2015 - Tech Fest of NITK, Surathkal
+ \item Head of Gadget SIG and Executive Member of \href{www.ienitk.in}{Institution of Engineers (IE)}, NITK Chapter during 2015-2016.
+ \item Secured AIR of 2124 in \href{www.jeemain.nic.in}{All India Engineering Entrance Examination(AIEEE)} conducted by CBSE in 2012.
+ \item Co-Founder of \href{https://www.facebook.com/CuartoWave/}{CUARTOWAVE}, a non-profit Organization.
+ \item Creator of Twitter Bot \href{https://twitter.com/bot_cricket/}{CricketBot}, for Latest updates on Cricket.
+ \item Member of U-16 WARANGAL District Cricket Champion team of the Year 2009,Member of College Cricket Team, Represented NITK in a Chess meet held at Puttur.
+ \item Volunteered to be a part of the organizing committee to hold \href{http://conferences.theiet.org/pinkerton/}{The Pinkerton Lecture}  by IET India at Infosys, Bangalore on 5 th Dec'13.
 \end{itemize}
 
 %----------------------------------------------------------------------------------------
@@ -139,10 +148,36 @@ All projects available on git : \url{https://www.github.com/ashish1294}
 %----------------------------------------------------------------------------------------
 
 \section{Hobbies}
-Competitive Coding, Watching Documentaries, Star Gazing, Editing Wiki Pages, Solving Puzzle
+\href{https://www.openprocessing.org/user/71442/#Sketches}{Games and Artistic Images in Processing}, Tech Follower, Playing and Watching Cricket
 
-\section{More}
-Please visit \href{https://www.ashishkedia.me}{https://www.ashishkedia.me}
+\section{MORE}
+Find all other things I do and work on at \href{https://nithinraok.github.io}{nithinraok.github.io/}
+
+\section{References}
+\begin{itemize}[leftmargin=*]
+ \item \textbf{\href{http://www.ee.iisc.ac.in/people/faculty/prasantg/}{Prasanta Kumar Ghosh}}\newline
+Assistant Professor, \newline
+Department of Electrical Engineering (EE),\newline
+Indian Institute of Science (IISc),\newline
+Bangalore, Karnataka, 560012\newline
+e-mail: prasantg@ee.iisc.ernet.in
+
+ \item \textbf{\href{http://ece.nitk.ac.in/faculty/pathipati-srihari}{Pathipati Srihari}}\newline
+Assistant Professor, \newline
+Department of Electronics and Communication Engineering (EC),\newline
+National Institue of Technology Karnataka(NITK),\newline
+Surathkal,Karnataka, 575025 \newline
+e-mail: srihari@nitk.ac.in
+
+ \item \textbf{\href{https://www.linkedin.com/in/preethi-r-46018399/}{Preethi Rama}}\newline
+Project Manager , \newline
+Multimedia Department,\newline
+Robert Bosch Engineering and Business Solutions Ltd,\newline
+Bangalore,Karnataka, 560095 \newline
+e-mail: preethi.r@in.bosch.com
+
+
+\end{itemize}
 
 \end{resume}
 \end{document}
